# rag-hovedopgave

./: .gitignore  CLAUDE.md  README.md  compass_artifact_wf-f56f52bc-4403-49ad-8903-96c6a6275e78_text_markdown.md  problemformulering.md  pyproject.toml  tech-stack.md
True/46ced4fc-36f7-4e0e-b4df-56ec447d3603/: index_metadata.pickle
docs/: problem-statement.md  project-planning.md
my-app/: package-lock.json
my-app/app/: assistant.tsx  layout.tsx
my-app/components/assistant-ui/: markdown-text.tsx  thread.tsx  threadlist-sidebar.tsx
research/: ml-best-practices.md
resources/example-data/beginner/: data-structures.md  docker.md  functions.md  json.md  oop.md  variables.md
resources/java-curriculum-materials/1-semester-programming/: README.md  topic-arrays.md  topic-conditions-logic.md  topic-exam-preparation.md  topic-exceptions.md  topic-file-handling.md  topic-input-output-types.md  topic-interfaces-advanced-sorting.md  topic-loops.md  topic-methods-part1.md  topic-methods-part2.md  topic-oop-advanced-topics.md  topic-oop-classes-objects.md  topic-oop-encapsulation.md  topic-oop-inheritance-polymorphism.md  topic-simple-sorting.md  topic-unit-testing.md
resources/java-curriculum-materials/2nd-semester-programming/: README.md  topic-adt-collections.md  topic-database-java-integration.md  topic-grasp-design-principles.md  topic-html-fundamentals.md  topic-javadoc-exam-prep.md  topic-sql-advanced.md  (+3 more)
src/rag_hovedopgave/: __init__.py  app.py  chat.py  chat_bot.py  document.py  main.py  new_chat_practice.py  oreilly.py  simple_chat_bot.py
tests/: __init__.py
(+17 files in other folders)
